--- a/S04 - Text Classification/BLU07 - Feature Extraction/BLU07 - Learning Notebook - Part 3 of 3 - Sentiment Analysis.ipynb
+++ b/S04 - Text Classification/BLU07 - Feature Extraction/BLU07 - Learning Notebook - Part 3 of 3 - Sentiment Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,428 @@
    "source": [
     "# Putting all of this in practice"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Aldolpho (Steve Buscemi), an aspiring film mak...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>An unfunny, unworthy picture which is an undes...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>A failure. The movie was just not good. It has...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>I saw this movie Sunday afternoon. I absolutel...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Disney goes to the well one too many times as ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Just PPV'd this. I don't want to waste too muc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I am a guy, who loves guy movies... I was look...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>The opening flourishes left me purring with de...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Although in some aspects Seven Pounds is solid...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I don't want to go off on a rant here, but.......</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I am a fan of the previous Best of the Best fi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I can't even believe that this show lasted as ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Kudos to Cesar Montano for reviving the Cebuan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>this is a great movie. i like it where ning cl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>...intimate and specific. Yes, a bit of a cind...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Astounding.....This may have been A poor attem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I have to admit, I don't remember much about t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I am a relative latecomer to the transcendent ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Many of the classic films of the late '60s hav...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>What a movie! I never imagined Richard Attenbo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>***SPOILERS*** ***SPOILERS*** Packed with memo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>I saw this film at the Santa Barbara Film Fest...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>This movie is lame and not funny at all. The p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>What \"Noise\" fails to do is get us to understa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>I saw it in a posh movie theater where the aud...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I went into this movie hoping for the best. I ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>I found this episode to be one of funniest I'v...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>This movie was so great! I am a teenager, and ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>This movie was packed pull of endless surprise...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>This thing is horrible. The Ben Affleck charac...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4970</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Bradford Dillman plays a scientist who wakes u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4971</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>i totally disagree.i thought that this was a g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4972</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>This stylistically sophisticated visual game p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4973</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Kevin Spacey is very talented, but unfortunate...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4974</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>As the celebration of Christmas has evolved th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4975</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Although nothing can compare to Vampires Vs. Z...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4976</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Quite simply the best reality show ever made. ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4977</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>The 3-D featured in \"The Man Who Wasn't There\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4978</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>While the acting and directing could be argued...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4979</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I have come out of several years of lurking on...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4980</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Perhaps more than many films, this one is not ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4981</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>I'll be blunt and to the point. This film is n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4982</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>At least I was able to enjoy mocking the movie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4983</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Just like Final Fantasy brought CG to a whole ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4984</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>This movie is without a doubt the worst horror...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4985</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>save your money. i have been a fan of fullmoon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4986</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Peter Ustinov plays an embezzler who is just g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4987</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>After a promising first 25 minutes that makes ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4988</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>The Three Stooges has always been some of the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4989</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>A wonderful television mini-series completely ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4990</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Don't get me wrong, this is a terrible, cliché...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4991</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Disney has now made straight-to-video sequels ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4992</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>If you delete the first twenty minutes or so o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4993</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>To all the haters out there: condemning a TV s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4994</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>For anyone who wishes to get an impression of ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4995</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Enchanting, romantic, innovative, and funny. T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4996</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Imagine the scenario - you are at the movie th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4997</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Dark Rising is your typical bad, obviously qui...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4998</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Well, what can I say, this movie really got to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4999</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>This was a truly bad film. The character \"Cole...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sentiment                                               text\n",
+       "0     Negative  Aldolpho (Steve Buscemi), an aspiring film mak...\n",
+       "1     Negative  An unfunny, unworthy picture which is an undes...\n",
+       "2     Negative  A failure. The movie was just not good. It has...\n",
+       "3     Positive  I saw this movie Sunday afternoon. I absolutel...\n",
+       "4     Negative  Disney goes to the well one too many times as ...\n",
+       "5     Negative  Just PPV'd this. I don't want to waste too muc...\n",
+       "6     Negative  I am a guy, who loves guy movies... I was look...\n",
+       "7     Positive  The opening flourishes left me purring with de...\n",
+       "8     Negative  Although in some aspects Seven Pounds is solid...\n",
+       "9     Negative  I don't want to go off on a rant here, but.......\n",
+       "10    Negative  I am a fan of the previous Best of the Best fi...\n",
+       "11    Negative  I can't even believe that this show lasted as ...\n",
+       "12    Positive  Kudos to Cesar Montano for reviving the Cebuan...\n",
+       "13    Positive  this is a great movie. i like it where ning cl...\n",
+       "14    Positive  ...intimate and specific. Yes, a bit of a cind...\n",
+       "15    Positive  Astounding.....This may have been A poor attem...\n",
+       "16    Negative  I have to admit, I don't remember much about t...\n",
+       "17    Negative  I am a relative latecomer to the transcendent ...\n",
+       "18    Positive  Many of the classic films of the late '60s hav...\n",
+       "19    Positive  What a movie! I never imagined Richard Attenbo...\n",
+       "20    Positive  ***SPOILERS*** ***SPOILERS*** Packed with memo...\n",
+       "21    Positive  I saw this film at the Santa Barbara Film Fest...\n",
+       "22    Negative  This movie is lame and not funny at all. The p...\n",
+       "23    Negative  What \"Noise\" fails to do is get us to understa...\n",
+       "24    Positive  I saw it in a posh movie theater where the aud...\n",
+       "25    Negative  I went into this movie hoping for the best. I ...\n",
+       "26    Positive  I found this episode to be one of funniest I'v...\n",
+       "27    Positive  This movie was so great! I am a teenager, and ...\n",
+       "28    Negative  This movie was packed pull of endless surprise...\n",
+       "29    Negative  This thing is horrible. The Ben Affleck charac...\n",
+       "...        ...                                                ...\n",
+       "4970  Negative  Bradford Dillman plays a scientist who wakes u...\n",
+       "4971  Positive  i totally disagree.i thought that this was a g...\n",
+       "4972  Positive  This stylistically sophisticated visual game p...\n",
+       "4973  Negative  Kevin Spacey is very talented, but unfortunate...\n",
+       "4974  Positive  As the celebration of Christmas has evolved th...\n",
+       "4975  Negative  Although nothing can compare to Vampires Vs. Z...\n",
+       "4976  Positive  Quite simply the best reality show ever made. ...\n",
+       "4977  Negative  The 3-D featured in \"The Man Who Wasn't There\"...\n",
+       "4978  Negative  While the acting and directing could be argued...\n",
+       "4979  Negative  I have come out of several years of lurking on...\n",
+       "4980  Positive  Perhaps more than many films, this one is not ...\n",
+       "4981  Negative  I'll be blunt and to the point. This film is n...\n",
+       "4982  Negative  At least I was able to enjoy mocking the movie...\n",
+       "4983  Positive  Just like Final Fantasy brought CG to a whole ...\n",
+       "4984  Negative  This movie is without a doubt the worst horror...\n",
+       "4985  Negative  save your money. i have been a fan of fullmoon...\n",
+       "4986  Positive  Peter Ustinov plays an embezzler who is just g...\n",
+       "4987  Negative  After a promising first 25 minutes that makes ...\n",
+       "4988  Positive  The Three Stooges has always been some of the ...\n",
+       "4989  Negative  A wonderful television mini-series completely ...\n",
+       "4990  Negative  Don't get me wrong, this is a terrible, cliché...\n",
+       "4991  Negative  Disney has now made straight-to-video sequels ...\n",
+       "4992  Positive  If you delete the first twenty minutes or so o...\n",
+       "4993  Positive  To all the haters out there: condemning a TV s...\n",
+       "4994  Positive  For anyone who wishes to get an impression of ...\n",
+       "4995  Positive  Enchanting, romantic, innovative, and funny. T...\n",
+       "4996  Negative  Imagine the scenario - you are at the movie th...\n",
+       "4997  Negative  Dark Rising is your typical bad, obviously qui...\n",
+       "4998  Positive  Well, what can I say, this movie really got to...\n",
+       "4999  Negative  This was a truly bad film. The character \"Cole...\n",
+       "\n",
+       "[5000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
