--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = os.path.join('data', 'ml-latest-small', 'ratings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -56,7 +65,6 @@
     "    Returns\n",
     "        data - (numpy.ndarray) array with the userId, movieId and rating\n",
     "    \"\"\"\n",
-    "    path = os.path.join('data', 'ml-latest-small', 'ratings.csv')\n",
     "    data = np.genfromtxt(path, delimiter=',', skip_header=1, usecols=[0, 1, 2])\n",
     "    return data\n",
     "\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +118,7 @@
        "'We have 671 user and 9066 items.'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -150,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -162,7 +170,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'csr_matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-e08b2b796a82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mH_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mH_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_csr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mR\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-7-e08b2b796a82>\u001b[0m in \u001b[0;36mget_csr\u001b[1;34m(R)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mH_\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mCompressed\u001b[0m \u001b[0mSparse\u001b[0m \u001b[0mRow\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \"\"\"\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mH_\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcsr_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mR\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mH_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'csr_matrix' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def get_csr(R):\n",
     "    \"\"\"\n",
@@ -180,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -210,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -240,27 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.64"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sparsity_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -282,27 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The Sparsity Score is 1.64%.'"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f\"The Sparsity Score is {sparsity_score}%.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -333,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -355,27 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The Sparse Representation size is 1.64% of the original matrix.'"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f\"The Sparse Representation size is {sparsity_representation_savings}% of the original matrix.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -426,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -455,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -487,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -517,26 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[182  51  24 ...  22  21  10]\n"
-     ]
-    }
-   ],
-   "source": [
-    "rated= np.greater(R, 3)\n",
-    "most_rated= rated.sum(axis=0)\n",
-    "print(most_rated[most_rated >= 10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -548,18 +517,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([120, 133, 110, 200,  96, 716, 177], dtype=int64)"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def elite(R, n=7, k=10):\n",
     "    \"\"\"\n",
@@ -583,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -597,19 +555,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-206-de48f7aedd45>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'25af7ec79f15bf252f96440f68995619f7b85bdfc1f89d69a227cd9d4cf80e7d'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest_items\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expected_hash = '25af7ec79f15bf252f96440f68995619f7b85bdfc1f89d69a227cd9d4cf80e7d'\n",
     "assert hashlib.sha256(str(best_items).encode()).hexdigest() == expected_hash"
@@ -626,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -664,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
