--- a/S02/BLU03 - Data Sources/Learning Notebook - Part 1 of 3 - Relational Databases and SQL.ipynb
+++ b/S02/BLU03 - Data Sources/Learning Notebook - Part 1 of 3 - Relational Databases and SQL.ipynb
@@ -1178,6 +1178,8 @@
     }
    ],
    "source": [
+    "db_file_path = 'data/the_movies.db'\n",
+    "conn_str = 'sqlite:///{}'.format(db_file_path)\n",
     "engine = create_engine(conn_str)\n",
     "query = 'SELECT * FROM movie LIMIT 5'\n",
     "pd.read_sql_query(query, engine)"
@@ -1257,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
