--- a/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU10 - Non-personalised recommender systems/Exercise notebook.ipynb
@@ -170,21 +170,9 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'csr_matrix' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-e08b2b796a82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mH_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mH_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_csr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mR\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-7-e08b2b796a82>\u001b[0m in \u001b[0;36mget_csr\u001b[1;34m(R)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mH_\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mCompressed\u001b[0m \u001b[0mSparse\u001b[0m \u001b[0mRow\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \"\"\"\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mH_\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcsr_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mR\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mH_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'csr_matrix' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from scipy.sparse import csr_matrix\n",
     "def get_csr(R):\n",
     "    \"\"\"\n",
     "    Parameters\n",
@@ -201,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -231,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -261,16 +249,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sparsity_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -292,16 +291,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Sparsity Score is 1.64%.'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f\"The Sparsity Score is {sparsity_score}%.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -354,16 +364,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Sparse Representation size is 1.64% of the original matrix.'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f\"The Sparse Representation size is {sparsity_representation_savings}% of the original matrix.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -414,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -443,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -475,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -505,7 +526,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_rating(R):\n",
+    "    return np.greater(R, 0)\n",
+    "\n",
+    "def count_ratings(R):\n",
+    "    R_ = is_rating(R)\n",
+    "    return R_.sum(axis=0)\n",
+    "\n",
+    "def remove_zeros(R):\n",
+    "    R_ = R.copy()\n",
+    "    R_[R_ == 0] = np.NaN\n",
+    "    return R_\n",
+    "\n",
+    "def mean_ratings(R):\n",
+    "    R_ = remove_zeros(R)\n",
+    "    return np.nanmean(R_, axis=0)\n",
+    "\n",
+    "def best_mean_rating(R, n):\n",
+    "    R_ = mean_ratings(R)\n",
+    "    return np.negative(R_).argsort()[:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -515,9 +563,21 @@
      "schema_version": 3,
      "solution": true,
      "task": false
-    }
+    },
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 812, 1371,  376,  173,  817, 1839,  814], dtype=int64)"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def elite(R, n=7, k=10):\n",
     "    \"\"\"\n",
@@ -528,20 +588,21 @@
     "        \n",
     "    Returns\n",
     "        best_items - (numpy.ndarray) array for top-n best mean rated items \n",
+    "        \n",
     "    \"\"\"\n",
-    "    rated= np.greater(R, 3)\n",
-    "    most_rated= rated.sum(axis=0)\n",
-    "    most_rated= most_rated[most_rated >= 10]\n",
-    "    #best_items= np.greater(R, 3)\n",
-    "    return np.negative(most_rated).argsort()[:n]\n",
     "    \n",
+    "    the_index = [i for i, e in enumerate(list(count_ratings(R))) if e < k]\n",
+    "    w = np.delete(R, the_index ,axis=1)\n",
+    "    z = best_mean_rating(w, n)\n",
+    "    return z\n",
+    "\n",
     "best_items = elite(R)\n",
     "best_items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -553,7 +614,8 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -634,6 +696,13 @@
     "\n",
     "np.testing.assert_approx_equal(df.iloc[2, 0], 0.253353, significant=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
