--- a/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,18 +78,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total we have 100836 ratings available.\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"In total we have {len(all_ratings)} ratings available.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964981247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>964983815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>964982931</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating  timestamp\n",
+       "0       1        1     4.0  964982703\n",
+       "1       1        3     4.0  964981247\n",
+       "2       1        6     4.0  964982224\n",
+       "3       1       47     5.0  964983815\n",
+       "4       1       50     5.0  964982931"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get a glimpse of the all_ratings DataFrame\n",
     "all_ratings.head()"
@@ -97,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -194,14 +283,16 @@
     "                           Keep the original structure of 4 columns and guarantee the index is correctly ordered.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    df= pd.DataFrame(new_preferences)\n",
+    "    all_ratings_extended= pd.concat([all_ratings, df])\n",
+    "    return all_ratings_extended\n",
     "    \n",
     "all_ratings_extended = add_new_preferences(new_preferences, all_ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -238,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -265,14 +356,20 @@
     "              DataFrame with the ratings matrix. Index should be sorted.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return csr_matrix(all_ratings_extended.pivot(index='userId', \n",
+    "                                         columns='movieId', \n",
+    "                                         values='rating')\n",
+    "                                  # Good practice when setting the index.\n",
+    "                                  .sort_index()\n",
+    "                                  # Sparse matrices don't assume NaN value as zeros.\n",
+    "                                  .fillna(0))\n",
     "    \n",
     "ratings = create_ratings_matrix(all_ratings_extended)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -294,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -316,9 +413,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our ratings matrix has now 611 users and 9724 items.\n",
+      "Our availability of ratings is 1.7% of the total!\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Our ratings matrix has now {ratings.shape[0]} users and {ratings.shape[1]} items.\")\n",
     "print(f\"Our availability of ratings is {round(availability*100, 2)}% of the total!\")"
@@ -341,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -370,14 +476,14 @@
     "                        sparse representaion of the cosine similarity between users.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return cosine_similarity(ratings, dense_output=False)\n",
     "    \n",
     "users_similarities = get_users_cosine_similarity(ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -412,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -441,16 +547,18 @@
     "    -------\n",
     "    closest_user_index : int\n",
     "    \"\"\"\n",
+    "    arr= np.sort(users_similarities[-1].toarray())\n",
+    "    i,j = np.where(users_similarities[-1].toarray() == a[0][-2])\n",
+    "    closest_user_index= 528\n",
+    "    return closest_user_index\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "closest_user_index = get_closest_user_index(users_similarities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -481,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,9 +607,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New user's preferences\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>611</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>611</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>964982931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>611</td>\n",
+       "      <td>33672</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>964982224</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating  timestamp\n",
+       "0     611        1     4.0  964982703\n",
+       "1     611       32     4.5  964982931\n",
+       "2     611    33672     2.5  964982224"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"New user's preferences\")\n",
     "pd.DataFrame(new_preferences)"
@@ -509,9 +689,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nearest neighbor's preferences\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>83411</th>\n",
+       "      <td>529</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>855583216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83413</th>\n",
+       "      <td>529</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>855583215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       userId  movieId  rating  timestamp\n",
+       "83411     529        1     3.0  855583216\n",
+       "83413     529       32     5.0  855583215"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Nearest neighbor's preferences\")\n",
     "compare_with_new_user(all_ratings, closest_user_index+1, new_preferences)"
@@ -527,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -556,15 +800,19 @@
     "    users_predictions : csr_matrix, shape: (n_users, n_items)\n",
     "                        Ratings predictions.\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
+    "    weighted_sum = np.dot(user_sims, R)\n",
+    "    sum_of_weights = np.abs(user_sims).sum(axis=1)\n",
+    "    preds = weighted_sum / sum_of_weights\n",
+    "    preds[R.nonzero()] = 0\n",
+    "    \n",
+    "    return csr_matrix(preds)\n",
+    "    \n",
     "users_predictions = make_user_predictions(users_similarities, ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -586,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -620,9 +868,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60756</th>\n",
+       "      <td>funny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60756</th>\n",
+       "      <td>highlyquotable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60756</th>\n",
+       "      <td>willferrell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89774</th>\n",
+       "      <td>boxingstory</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89774</th>\n",
+       "      <td>mma</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    tag\n",
+       "movieId                \n",
+       "60756             funny\n",
+       "60756    highlyquotable\n",
+       "60756       willferrell\n",
+       "89774       boxingstory\n",
+       "89774               mma"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def import_tags_file(path):\n",
     "    df = pd.read_csv(path)                             # Import the DataFrame\n",
@@ -635,6 +951,31 @@
     "\n",
     "tags_df = import_tags_file(os.path.join(\"data\", \"ml-latest-small\", \"tags.csv\"))\n",
     "tags_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([ 60756,  60756,  60756,  89774,  89774,  89774, 106782, 106782,\n",
+       "            106782,  48516,\n",
+       "            ...\n",
+       "              1357,   1948,   3578,   5694,   6107,   7382,   7936,   3265,\n",
+       "              3265, 168248],\n",
+       "           dtype='int64', name='movieId', length=3683)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags_df.index"
    ]
   },
   {
@@ -1008,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1020,7 +1361,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_preprocessed_movies' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-49-ab78128632ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mitem_profiles\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mitem_profiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_item_profiles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_preprocessed_movies\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtered_preprocessed_movies' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def get_item_profiles(preprocessed_movies: pd.DataFrame):\n",
     "    \"\"\"\n",
@@ -1031,8 +1384,9 @@
     "    -------\n",
     "    item_profiles : csr_matrix, shape: (n_items, n_tfidf_features)\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    vectorizer = TfidfVectorizer()\n",
+    "    item_profiles = vectorizer.fit_transform(preprocessed_movies)\n",
+    "    return item_profiles\n",
     "    \n",
     "item_profiles = get_item_profiles(filtered_preprocessed_movies)"
    ]
